# Crypto-Trader-Ver-9-beta

./: .gitignore  .importlinter  .pre-commit-config.yaml  HOTFIX_INSTALLATION_GUIDE.md  HOTFIX_MISSING_MODULES.patch  MIGRATION_GUIDE.md  PHASE2_NOTES.md  PHASE_5_COMPLETE.md  README.md  VALIDATION_GATES.md  config.json  deep-research-report.md  pyproject.toml  pytest.ini  run_kernel.py  validate_gates.sh  validate_gates_quick.sh
.github/workflows/: ci.yml  validate.yml
Crypto_Trader_Ver_9_beta.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
docs/: VALIDATION.md
docs/architecture/: domain_refactor_plan.md
scripts/: validate.sh
tests/: __init__.py  conftest.py  test_kernel_pipeline.py
tests/integration/: test_duplicate_suppression.py  test_replay_correctness.py
tests/phase1/: __init__.py  test_domain_events.py
tests/phase4/: __init__.py  test_state_models.py
tests/phase5/: __init__.py  test_event_journal.py  test_idempotency.py
ver9/: __init__.py
ver9/config/: __init__.py  exchange_config.py  schemas.py  settings.py
ver9/domain/: __init__.py
ver9/domain/events/: __init__.py  execution.py  (+2 more)
ver9/events/: _init_.py  base_event.py  execution_events.py  execution_models.py  market_events.py  portfolio_events.py  system_events.py
ver9/exchanges/: __init__.py
ver9/execution/: __init__.py  idempotency.py  oms.py  oms_phase2.py
ver9/interfaces/: __init__.py
ver9/observability/: __init__.py  logging.py  metrics.py  tracing.py
ver9/persistence/: event_journal.py
ver9/portfolio/: __init__.py  allocation.py  risk.py
ver9/runtime/: __init__.py
(+49 files in other folders)
