[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Crypto-Trader-Ver-9-beta"
version = "9.0.0b0"
description = "Clean event-driven beta infrastructure for the Ver9 algorithmic trading runtime."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [
    { name = "Nims-S" }
]
keywords = [
    "algorithmic-trading",
    "event-driven",
    "crypto",
    "runtime-kernel",
    "oms",
    "exchange-adapters"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
    "Intended Audience :: Financial and Insurance Industry",
    "Topic :: Office/Business :: Financial :: Investment"
]

dependencies = [
    "pydantic>=2.7",
    "msgspec>=0.18",
    "aiohttp>=3.9",
    "websockets>=12.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "black>=24.0",
    "ruff>=0.5",
    "mypy>=1.10"
]

[tool.setuptools.packages.find]
include = ["ver9*"]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
